# sfc-comp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench.cpp  main.cpp
.github/workflows/: build.yml
doc/: GameList.md  LunarCompress.md
include/: sfc_comp.hpp
src/: action_pachio_comp.cpp  addams_family_comp.cpp  algorithm.hpp  asameshimae_nyanko_comp.cpp  bahamut_lagoon_comp.cpp  bokujou_monogatari_comp.cpp  burai_comp.cpp  cannon_fodder_comp.cpp  cb_chara_wars_comp.cpp  chrono_trigger_comp.cpp  danzarb_comp.cpp  data_structure.hpp  der_langrisser_comp.cpp  derby_stallion_2_comp.cpp  diet_comp.cpp  dokapon_comp.cpp  doom_comp.cpp  doraemon_comp.cpp  dq12_comp.cpp  dq6_comp.cpp  dragon_knight_4_comp.cpp  encode.cpp  encode.hpp  estpolis_biography_comp.cpp  famicom_tantei_club_part_ii_comp.cpp  fe3_comp.cpp  fe4_comp.cpp  ff5_comp.cpp  ff6_comp.cpp  ffusa_comp.cpp  final_stretch_comp.cpp  flintstones_comp.cpp  front_mission_comp_2.cpp  gokinjo_boukentai_comp.cpp  gun_hazard_comp.cpp  hal_comp.cpp  hanjuku_hero_comp.cpp  heberekes_popoon_comp.cpp  huffman.cpp  huffman.hpp  (+69 more)
